carousel stretch fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,11 +11,6 @@ a:hover {
 	color: inherit;
 }
 
-.carousel-item > img {
-	height: 85vh;
-	width: 85vh;
-}
-
 .app-icon {
 	height: 100px;
 	width: 100px;
